Remove visibility modifiers from tests (#76)