@@ -7,21 +7,21 @@ import rocks.inspectit.ocelot.eum.server.beacon.Beacon;
 import rocks.inspectit.ocelot.eum.server.configuration.model.metrics.definition.BeaconRequirement;
 import rocks.inspectit.ocelot.eum.server.configuration.model.exporters.beacon.InitiatorType;
 
-import java.util.Arrays;
 import java.util.Collections;
 import java.util.HashMap;
+import java.util.List;
 
 import static org.assertj.core.api.Assertions.assertThat;
 
 class BeaconRequirementTest {
 
     @Nested
-    public class StaticValidate {
+    class StaticValidate {
 
-        private Beacon beacon;
+        Beacon beacon;
 
         @BeforeEach
-        public void before() {
+        void before() {
             HashMap<String, String> map = new HashMap<>();
             map.put("first", "1");
             map.put("second", "2");
@@ -29,7 +29,7 @@ class BeaconRequirementTest {
         }
 
         @Test
-        public void noFulfillment() {
+        void noFulfillment() {
             BeaconRequirement requirementA = new BeaconRequirement();
             requirementA.setField("third");
             requirementA.setRequirement(BeaconRequirement.RequirementType.NOT_EXISTS);
@@ -37,13 +37,13 @@ class BeaconRequirementTest {
             requirementB.setField("second");
             requirementB.setRequirement(BeaconRequirement.RequirementType.NOT_EXISTS);
 
-            boolean result = BeaconRequirement.validate(beacon, Arrays.asList(requirementA, requirementB));
+            boolean result = BeaconRequirement.validate(beacon, List.of(requirementA, requirementB));
 
             assertThat(result).isFalse();
         }
 
         @Test
-        public void fulfillment() {
+        void fulfillment() {
             BeaconRequirement requirementA = new BeaconRequirement();
             requirementA.setField("third");
             requirementA.setRequirement(BeaconRequirement.RequirementType.NOT_EXISTS);
@@ -51,20 +51,20 @@ class BeaconRequirementTest {
             requirementB.setField("second");
             requirementB.setRequirement(BeaconRequirement.RequirementType.EXISTS);
 
-            boolean result = BeaconRequirement.validate(beacon, Arrays.asList(requirementA, requirementB));
+            boolean result = BeaconRequirement.validate(beacon, List.of(requirementA, requirementB));
 
             assertThat(result).isTrue();
         }
 
         @Test
-        public void nullList() {
+        void nullList() {
             boolean result = BeaconRequirement.validate(beacon, null);
 
             assertThat(result).isTrue();
         }
 
         @Test
-        public void emptyList() {
+        void emptyList() {
             boolean result = BeaconRequirement.validate(beacon, Collections.emptyList());
 
             assertThat(result).isTrue();
@@ -72,12 +72,12 @@ class BeaconRequirementTest {
     }
 
     @Nested
-    public class Validate {
+    class Validate {
 
-        private BeaconRequirement requirement = new BeaconRequirement();
+        BeaconRequirement requirement = new BeaconRequirement();
 
         @Test
-        public void noFulfillmentNotExists() {
+        void noFulfillmentNotExists() {
             Beacon beacon = Beacon.of(Collections.singletonMap("field", "5"));
             requirement.setField("field");
             requirement.setRequirement(BeaconRequirement.RequirementType.NOT_EXISTS);
@@ -88,7 +88,7 @@ class BeaconRequirementTest {
         }
 
         @Test
-        public void fulfillmentNotExists() {
+        void fulfillmentNotExists() {
             Beacon beacon = Beacon.of(Collections.singletonMap("field", "5"));
             requirement.setField("another");
             requirement.setRequirement(BeaconRequirement.RequirementType.NOT_EXISTS);
@@ -99,7 +99,7 @@ class BeaconRequirementTest {
         }
 
         @Test
-        public void noFulfillmentExists() {
+        void noFulfillmentExists() {
             Beacon beacon = Beacon.of(Collections.singletonMap("field", "5"));
             requirement.setField("another");
             requirement.setRequirement(BeaconRequirement.RequirementType.EXISTS);
@@ -110,7 +110,7 @@ class BeaconRequirementTest {
         }
 
         @Test
-        public void fulfillmentExists() {
+        void fulfillmentExists() {
             Beacon beacon = Beacon.of(Collections.singletonMap("field", "5"));
             requirement.setField("field");
             requirement.setRequirement(BeaconRequirement.RequirementType.EXISTS);
@@ -121,9 +121,9 @@ class BeaconRequirementTest {
         }
 
         @Test
-        public void wrongInitiator() {
+        void wrongInitiator() {
             Beacon beacon = Beacon.of(Collections.singletonMap("http.initiator", "spa"));
-            requirement.setInitiators(Arrays.asList(InitiatorType.SPA_HARD));
+            requirement.setInitiators(List.of(InitiatorType.SPA_HARD));
             requirement.setRequirement(BeaconRequirement.RequirementType.HAS_INITIATOR);
 
             boolean result = requirement.validate(beacon);
@@ -132,9 +132,9 @@ class BeaconRequirementTest {
         }
 
         @Test
-        public void correctInitiator() {
+        void correctInitiator() {
             Beacon beacon = Beacon.of(Collections.singletonMap("http.initiator", "xhr"));
-            requirement.setInitiators(Arrays.asList(InitiatorType.SPA_HARD, InitiatorType.XHR));
+            requirement.setInitiators(List.of(InitiatorType.SPA_HARD, InitiatorType.XHR));
             requirement.setRequirement(BeaconRequirement.RequirementType.HAS_INITIATOR);
 
             boolean result = requirement.validate(beacon);
@@ -143,9 +143,9 @@ class BeaconRequirementTest {
         }
 
         @Test
-        public void nullInitiator() {
+        void nullInitiator() {
             Beacon beacon = Beacon.of(Collections.emptyMap());
-            requirement.setInitiators(Arrays.asList(InitiatorType.SPA_HARD, InitiatorType.XHR));
+            requirement.setInitiators(List.of(InitiatorType.SPA_HARD, InitiatorType.XHR));
             requirement.setRequirement(BeaconRequirement.RequirementType.HAS_INITIATOR);
 
             boolean result = requirement.validate(beacon);
@@ -154,7 +154,7 @@ class BeaconRequirementTest {
         }
 
         @Test
-        public void documentInitiator() {
+        void documentInitiator() {
             Beacon beacon = Beacon.of(Collections.emptyMap());
             requirement.setInitiators(Collections.singletonList(InitiatorType.DOCUMENT));
             requirement.setRequirement(BeaconRequirement.RequirementType.HAS_INITIATOR);
